# smartbike

Documents/working/: Makefile  m.c  motion  motion_example.c  server.c  test.c  tracking  tracking.c  tracking_2.c
Smart-Bike/: README.md  bike.c  bike.h  header.h  receive_packet.c  routing_table.c  routing_table.h  send_packet.c  socket.c  socket.h  tracking_2.c
Smart-Bike/jacket/: CMakeLists.txt  COPYING  ChangeLog  Makefile.am  autogen.sh  config.h.in  configure.ac
Smart-Bike/jacket/doc/: Makefile.am
Smart-Bike/jacket/m4/: Makefile.am
Smart-Bike/jacket/src/: .swp  Makefile.am  motion_example.c
Smart-Bike/jacket/src/win32/: pthread_win32.h
Smart-Bike/jacket/tests/: Makefile.am  queue_test.c  run_queue_tests.sh  stuck_loop.c
